# RTC_ChatterBot

./: CMakeLists.txt  README.md
chatterbox_app/: CMakeLists.txt  main_exercise.c
